--- a/css/teporadas.css
+++ b/css/teporadas.css
@@ -14,6 +14,15 @@ body {
 
 .cabezote {
   height: 77px;
+  width: 100%;
+}
+
+.menu {
+  float: left;
+  width: 45px;
+  height: 45px;
+  margin-top: 30px;
+  margin-left: 30px;
 }
 
 .logo {
@@ -21,10 +30,191 @@ body {
   max-height: 100%;
   margin-left: auto;
   margin-right: auto;
+  padding-top: 30px;
 }
 
 .bmenu2 {
   display: none;
+}
+
+.bmenu2 a {
+  display: none;
+}
+
+.bmenu2 .active {
+  display: none;
+}
+
+.bg-opacity {
+  position: relative;
+  background-color: #000;
+}
+
+.bg-opacity::before {
+  content: " ";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  opacity: 0.5;
+  background: url("../images/hero.jpg") no-repeat center center;
+  background-position: 0;
+  background-size: cover;
+  overflow: hidden;
+}
+
+.hero {
+  position: relative;
+  width: 100%;
+  height: 600px;
+  text-align: center;
+}
+
+.hero p {
+  font-size: 30pt;
+  color: white;
+  position: relative;
+  top: 45%;
+}
+
+.big-picture {
+  margin-top: 37px;
+  height: 475px;
+  padding-left: 5%;
+  padding-right: 5%;
+  max-width: 100%;
+  overflow: hidden;
+}
+
+.big-picture img {
+  max-width: 100%;
+  height: auto;
+}
+
+.article {
+  padding-top: 30px;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+.article .title {
+  text-align: center;
+  font-size: 25pt;
+}
+
+.article .text {
+  padding-top: 30px;
+  font-size: 12pt;
+  text-align: justify;
+  text-justify: inter-word;
+  padding-bottom: 43px;
+}
+
+video {
+  width: 100% !important;
+  height: auto !important;
+}
+
+.article_2 {
+  padding-top: 40px;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+.article_2 .title {
+  text-align: center;
+  font-size: 25pt;
+  padding-bottom: 50px;
+}
+
+.article_2 .text {
+  font-size: 13pt;
+  text-align: justify;
+  text-justify: inter-word;
+  padding-bottom: 43px;
+}
+
+.container_iframe {
+  margin-left: 5%;
+  margin-right: 5%;
+  overflow: hidden;
+  height: 1000px;
+  width: 90%;
+  margin-bottom: 52px;
+}
+
+.container_iframe .iframe {
+  height: 100%;
+  width: 100%;
+  margin-top: -100px;
+  transform: scale(1.3);
+}
+
+footer {
+  background-color: #f6afa4;
+  height: 250px;
+  font-size: 16pt;
+  font-style: normal;
+  font-weight: 300;
+  padding-top: 30px;
+  color: white;
+  overflow: hidden;
+}
+
+.pie {
+  float: left;
+  width: 100%;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+.pie ul li a {
+  color: white;
+  text-decoration: none;
+  width: 0%;
+  text-align: center;
+  margin-left: 0px;
+  float: left;
+}
+.pie ul {
+  list-style-type: disc;
+}
+
+.pie2 {
+  margin-top: 15px;
+  padding-top: 10px;
+  font-style: normal;
+  font-weight: 200;
+  margin-left: 5%;
+  margin-right: 5%;
+  font-size: 10pt;
+  border-top: solid 0.1px white;
+}
+.pie2 p {
+  margin: 1px;
+}
+.redes {
+  width: 45%;
+  float: right;
+  margin-top: -35px;
+  margin-right: 5px;
+}
+
+.iconos2 {
+  height: 25px;
+  width: 25px;
+  background-color: white;
+  border-radius: 50%;
+  display: inline-block;
+  margin: 5px;
+}
+.iconos2 a {
+  text-decoration: none;
+  float: left;
+  margin-right: 3%;
+  margin-top: 25px;
+  width: 30%;
 }
 
 @media screen and (min-width: 768px) {
@@ -36,6 +226,10 @@ body {
 @media screen and (min-width: 1280px) {
   .cabezote {
     height: 190px;
+  }
+
+  .menu {
+    display: none;
   }
 
   .logo {
